# git2cpp

./: .clang-format  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  RELEASE.md  dev-environment.yml  meson.build  overview.md  pyproject.toml
.github/workflows/: deploy-wasm.yml  test-wasm.yml  test.yml
docs/: Makefile  conf.py  create_markdown.py  index.md
src/: git_exception.hpp  main.cpp  meson.build  version.hpp
src/subcommand/: add_subcommand.cpp  add_subcommand.hpp  base_subcommand.hpp  branch_subcommand.cpp  branch_subcommand.hpp  checkout_subcommand.cpp  checkout_subcommand.hpp  clone_subcommand.cpp  clone_subcommand.hpp  commit_subcommand.cpp  commit_subcommand.hpp  config_subcommand.cpp  config_subcommand.hpp  diff_subcommand.cpp  diff_subcommand.hpp  fetch_subcommand.cpp  fetch_subcommand.hpp  init_subcommand.cpp  init_subcommand.hpp  log_subcommand.cpp  log_subcommand.hpp  merge_subcommand.cpp  merge_subcommand.hpp  meson.build  mv_subcommand.cpp  mv_subcommand.hpp  push_subcommand.cpp  push_subcommand.hpp  rebase_subcommand.cpp  rebase_subcommand.hpp  remote_subcommand.cpp  remote_subcommand.hpp  reset_subcommand.cpp  reset_subcommand.hpp  revlist_subcommand.cpp  revlist_subcommand.hpp  revparse_subcommand.cpp  revparse_subcommand.hpp  rm_subcommand.cpp  rm_subcommand.hpp  (+6 more)
src/utils/: ansi_code.cpp  ansi_code.hpp  common.cpp  common.hpp  credentials.cpp  credentials.hpp  git_exception.cpp  git_exception.hpp  input_output.cpp  input_output.hpp  meson.build  output.cpp  output.hpp  progress.cpp  progress.hpp  terminal_pager.cpp  terminal_pager.hpp
src/wasm/: libgit2_internals.cpp  libgit2_internals.hpp  response.cpp  response.hpp  scope.cpp  scope.hpp  stream.cpp  stream.hpp  subtransport.cpp  subtransport.hpp  transport.cpp  transport.hpp
src/wrapper/: annotated_commit_wrapper.cpp  annotated_commit_wrapper.hpp  base_wrapper.cpp  base_wrapper.hpp  branch_wrapper.cpp  branch_wrapper.hpp  commit_wrapper.cpp  commit_wrapper.hpp  config_wrapper.cpp  config_wrapper.hpp  diff_wrapper.cpp  diff_wrapper.hpp  diffstats_wrapper.cpp  diffstats_wrapper.hpp  index_wrapper.cpp  index_wrapper.hpp  meson.build  object_wrapper.cpp  object_wrapper.hpp  patch_wrapper.cpp  patch_wrapper.hpp  rebase_wrapper.cpp  rebase_wrapper.hpp  refs_wrapper.cpp  refs_wrapper.hpp  remote_wrapper.cpp  remote_wrapper.hpp  repository_wrapper.cpp  repository_wrapper.hpp  revwalk_wrapper.cpp  revwalk_wrapper.hpp  signature_wrapper.cpp  signature_wrapper.hpp  status_wrapper.cpp  status_wrapper.hpp  tag_wrapper.cpp  tag_wrapper.hpp  tree_wrapper.cpp  tree_wrapper.hpp  wrapper_base.hpp
test/: conftest.py  conftest_wasm.py  test_add.py  test_branch.py  test_checkout.py  test_clone.py  test_commit.py  test_config.py  test_diff.py  test_fetch.py  test_fixtures.py  test_git.py  test_init.py  test_log.py  test_merge.py  test_mv.py  test_push.py  test_rebase.py  test_remote.py  test_reset.py  test_revlist.py  test_revparse.py  test_rm.py  test_stash.py  test_status.py  test_tag.py
test/data/status_data/: last_test_file.txt  random_file.txt
test/data/status_data/embedded_git/: HEAD  index
test/data/status_data/embedded_git/logs/: HEAD
test/data/status_data/embedded_git/logs/refs/heads/: commit_test_branch
test/data/status_data/embedded_git/refs/heads/: main
test/data/status_data/embeded_git/logs/: HEAD
wasm/: .gitignore  CMakeLists.txt  README.md  common.cmake  wasm-environment.yml
wasm/cockle-deploy/: CMakeLists.txt  package.json  rspack.config.js  tsconfig.json
wasm/cockle-deploy/assets/: index.html
wasm/cockle-deploy/src/: defs.ts  deployment.ts  index.ts
wasm/cockle-deploy/src/style/: deployment.css
wasm/lite-deploy/: CMakeLists.txt
wasm/recipe/: CMakeLists.txt  modify-recipe.py
wasm/serve/: CMakeLists.txt  package.json
wasm/test/: CMakeLists.txt  cockle-config-in.json  package.json  rspack.config.js  tsconfig.json
wasm/test/assets/: index.html
wasm/test/src/: index.ts  utils.ts
